--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       for (let i = 0; i < count; i++) {
         const newSuffixNumber = startNum + i;
         const newLot = `${base}${newSuffixNumber}${letterSuffix}`;
-        const displayText = `Lot #: ${newLot}`;
+        const displayText = `LOTt #: ${newLot}`;
 
         const span = document.createElement('span');
         span.textContent = displayText;
