--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       font-family: Arial, sans-serif;
       padding: 20px;
       /* Gradient background */
-      background: linear-gradient(135deg, #ff9a00, #ff6a00, #ff0055);
+      background: linear-gradient(135deg, #141414, #5e3d0b, #6e6a65);
       display: flex;
       min-height: 100vh;
       margin: 0;
@@ -27,7 +27,7 @@
 
     .main-content {
       flex: 2;
-      margin-right: 40px;
+      margin-right: 90px;
       display: flex;
       flex-direction: column;
       max-width: 600px;
@@ -49,7 +49,7 @@
     }
 
     button {
-      background-color: #ff6a00;
+      background-color: #361c1c;
       color: white;
       border: none;
       border-radius: 8px;
@@ -129,6 +129,13 @@
     .copied-dialog button:hover {
       background-color: #e65b00;
     }
+
+    /* New styling for the date buttons container */
+    #dateButtonsContainer button {
+      margin-right: 8px;
+      margin-bottom: 10px;
+      min-width: 80px;
+    }
   </style>
 </head>
 <body>
@@ -136,10 +143,14 @@
   <div class="main-content">
     <h2>Solution Lot Builder</h2>
 
+    <div id="dateButtonsContainer" style="margin-bottom: 15px;">
+      <strong>Select Date:</strong><br>
+    </div>
+
     <label for="lotLetters">Lot Letters/Suffix (e.g., MAE):</label><br>
     <input type="text" id="lotLetters" placeholder="e.g., MAE" maxlength="5"><br>
 
-    <label for="lotNumbers">Lot Number (e.g., 0809251):</label><br>
+    <label for="lotNumbers">Lot Number (Select Date from Above):</label><br>
     <input type="text" id="lotNumbers" placeholder="e.g., 0809251" maxlength="10"><br>
 
     <label for="count">How many to generate:</label><br>
@@ -170,7 +181,7 @@
         alert('Lot letters must be at least 3 characters A-Z only.');
         return;
       }
-      if (!numbers.match(/^\d+\d$/)) {
+      if (!numbers.match(/^\d+$/)) {
         alert('Lot number must be numeric.');
         return;
       }
@@ -178,8 +189,9 @@
       // Break apart
       const firstTwoLetters = letters.slice(0, 2);
       const suffixLetter = letters.slice(2); // everything after 2nd letter
-      const datePart = numbers.slice(0, -1); // everything except last digit
-      let serialNum = parseInt(numbers.slice(-1), 10); // last digit only
+
+      const datePart = numbers.slice(0, -1);
+      const serialNum = parseInt(numbers.slice(-1), 10);
 
       for (let i = 0; i < count; i++) {
         const newSerial = serialNum + i;
@@ -218,6 +230,50 @@
         .then(() => alert("All created lots copied to clipboard."))
         .catch(() => alert("Failed to copy."));
     }
+
+    // Helper functions for date buttons
+    function pad(num) {
+      return num.toString().padStart(2, '0');
+    }
+
+    function formatDateForLot(date) {
+      // MMDDYY format
+      const mm = pad(date.getMonth() + 1);
+      const dd = pad(date.getDate());
+      const yy = date.getFullYear().toString().slice(-2);
+      return `${mm}${dd}${yy}`;
+    }
+
+    function getWeekdayName(date) {
+      return date.toLocaleDateString(undefined, { weekday: 'short' }); // e.g. Sun, Mon
+    }
+
+    function createDateButtons() {
+      const container = document.getElementById('dateButtonsContainer');
+      container.innerHTML = '<strong>Select Date:</strong><br>';
+
+      const today = new Date();
+
+      for (let i = 0; i < 7; i++) {
+        const date = new Date(today);
+        date.setDate(today.getDate() + i);
+
+        const formattedDate = formatDateForLot(date);
+        const weekday = getWeekdayName(date);
+
+        const btn = document.createElement('button');
+        btn.textContent = `${weekday} ${pad(date.getMonth() + 1)}/${pad(date.getDate())}`;
+        btn.onclick = () => {
+          document.getElementById('lotNumbers').value = `${formattedDate}1`;
+        };
+
+        container.appendChild(btn);
+      }
+    }
+
+    // Initialize date buttons on page load
+    createDateButtons();
+
   </script>
 
 </body>
