--- a/index.html
+++ b/index.html
@@ -7,30 +7,60 @@
     body {
       font-family: Arial, sans-serif;
       padding: 20px;
-      /* Gradient background */
-      background: linear-gradient(135deg, #141414, #5e3d0b, #6e6a65);
+      background: linear-gradient(135deg, #baa2a2, #5e3d0b, #211d18);
       display: flex;
       min-height: 100vh;
       margin: 0;
-      color: #222;
-    }
-
-    .main-content, .copied-dialog {
-      /* translucent white background with blur */
-      background: rgba(255, 255, 255, 0.8);
-      backdrop-filter: blur(10px);
-      -webkit-backdrop-filter: blur(10px);
-      border-radius: 12px;
-      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
-      padding: 25px;
+      color: #145;
     }
 
     .main-content {
       flex: 2;
-      margin-right: 90px;
+      margin-right: 40px;
       display: flex;
       flex-direction: column;
       max-width: 600px;
+    }
+
+    .dialogs {
+      flex: 1;
+      display: flex;
+      gap: 30px; /* spacing between the two dialog boxes */
+    }
+
+    .dialog-box {
+      flex: 1;
+      background: rgba(255, 255, 255, 0.8);
+      backdrop-filter: blur(10px);
+      border-radius: 12px;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
+      padding: 20px;
+      max-height: 600px;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .dialog-box h3 {
+      margin-top: 0;
+      color: #ff6a00;
+      font-weight: 700;
+      user-select: none;
+    }
+
+    .dialog-box ul {
+      list-style-type: none;
+      padding-left: 0;
+      margin: 0 0 10px 0;
+      flex-grow: 1;
+      overflow-y: auto;
+    }
+
+    .dialog-box li {
+      margin-bottom: 8px;
+      white-space: pre;
+      font-family: monospace;
+      font-weight: 500;
+      color: #333;
     }
 
     input, button {
@@ -80,57 +110,6 @@
       color: white;
     }
 
-    .copied-dialog {
-      flex: 1;
-      max-height: 400px;
-      overflow-y: auto;
-      min-width: 280px;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-    }
-
-    .copied-dialog h3 {
-      margin-top: 0;
-      color: #ff6a00;
-      font-weight: 700;
-      user-select: none;
-    }
-
-    .copied-dialog ul {
-      list-style-type: none;
-      padding-left: 0;
-      margin: 0 0 10px 0;
-      flex-grow: 1;
-      overflow-y: auto;
-    }
-
-    .copied-dialog li {
-      margin-bottom: 8px;
-      white-space: pre; /* Keep tab spacing visible */
-      font-family: monospace;
-      font-weight: 500;
-      color: #333;
-    }
-
-    .copied-dialog button {
-      padding: 12px 16px;
-      font-size: 1em;
-      background-color: #ff6a00;
-      color: white;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      font-weight: 600;
-      user-select: none;
-      transition: background-color 0.3s ease;
-    }
-
-    .copied-dialog button:hover {
-      background-color: #e65b00;
-    }
-
-    /* New styling for the date buttons container */
     #dateButtonsContainer button {
       margin-right: 8px;
       margin-bottom: 10px;
@@ -148,7 +127,7 @@
     </div>
 
     <label for="lotLetters">Lot Letters/Suffix (e.g., MAE):</label><br>
-    <input type="text" id="lotLetters" placeholder="e.g., MAE" maxlength="5"><br>
+    <input type="text" id="lotLetters" placeholder="e.g., MAE" maxlength="3"><br>
 
     <label for="lotNumbers">Lot Number (Select Date from Above):</label><br>
     <input type="text" id="lotNumbers" placeholder="e.g., 0809251" maxlength="10"><br>
@@ -157,18 +136,30 @@
     <input type="number" id="count" value="10" min="1"><br>
 
     <button onclick="generateLots()">Generate</button>
+    <button onclick="addAllGeneratedLots()">Add All to Bulk Lots</button>
 
     <div class="lot-list" id="results"></div>
   </div>
 
-  <div class="copied-dialog" id="copiedBox">
-    <h3>Created Lots</h3>
-    <ul id="copiedList"></ul>
-    <button onclick="copyAllCreatedLots()">Copy All Created Lots</button>
+  <div class="dialogs">
+    <!-- Manual Clicks -->
+    <div class="dialog-box">
+      <h3>Created Lots (Manual)</h3>
+      <ul id="manualList"></ul>
+      <button onclick="copyAll('manualList')">Copy All Manual Lots</button>
+    </div>
+
+    <!-- Bulk Adds -->
+    <div class="dialog-box">
+      <h3>Created Lots (Bulk)</h3>
+      <ul id="bulkList"></ul>
+      <button onclick="copyAll('bulkList')">Copy All Bulk Lots</button>
+    </div>
   </div>
 
   <script>
-    const copiedSet = new Set();
+    const manualSet = new Set();
+    const bulkSet = new Set();
 
     function generateLots() {
       const letters = document.getElementById('lotLetters').value.trim().toUpperCase();
@@ -186,10 +177,8 @@
         return;
       }
 
-      // Break apart
       const firstTwoLetters = letters.slice(0, 2);
-      const suffixLetter = letters.slice(2); // everything after 2nd letter
-
+      const suffixLetter = letters.slice(2);
       const datePart = numbers.slice(0, -1);
       const serialNum = parseInt(numbers.slice(-1), 10);
 
@@ -203,41 +192,60 @@
         span.onclick = () => {
           navigator.clipboard.writeText(displayText);
           span.style.background = "#1E90FF";
-          addToCopiedList(newLot);
+          addToManualList(newLot);
         };
         resultArea.appendChild(span);
       }
     }
 
-    function addToCopiedList(lot) {
-      if (copiedSet.has(lot)) return;
-      copiedSet.add(lot);
+    function addToManualList(lot) {
+      if (manualSet.has(lot)) return;
+      manualSet.add(lot);
 
       const li = document.createElement('li');
-      li.textContent = `${lot}\tSOLP`; // Tab separated
-      document.getElementById('copiedList').appendChild(li);
+      li.textContent = `${lot}\tSOLP`;
+      document.getElementById('manualList').appendChild(li);
     }
 
-    function copyAllCreatedLots() {
-      const items = Array.from(document.querySelectorAll('#copiedList li')).map(li => li.textContent);
-      if (items.length === 0) {
-        alert("No created lots to copy.");
+    function addAllGeneratedLots() {
+      const results = document.querySelectorAll('#results span');
+      if (results.length === 0) {
+        alert("No generated lots to add.");
         return;
       }
+      results.forEach(span => {
+        const lotText = span.textContent.replace("LOT #: ", "");
+        addToBulkList(lotText);
+        span.style.background = "#1E90FF";
+      });
+    }
 
+    function addToBulkList(lot) {
+      if (bulkSet.has(lot)) return;
+      bulkSet.add(lot);
+
+      const li = document.createElement('li');
+      li.textContent = `${lot}\tSOLP`;
+      document.getElementById('bulkList').appendChild(li);
+    }
+
+    function copyAll(listId) {
+      const items = Array.from(document.querySelectorAll(`#${listId} li`)).map(li => li.textContent);
+      if (items.length === 0) {
+        alert("No lots to copy.");
+        return;
+      }
       const textToCopy = items.join('\n');
       navigator.clipboard.writeText(textToCopy)
-        .then(() => alert("All created lots copied to clipboard."))
+        .then(() => alert("Copied all lots to clipboard."))
         .catch(() => alert("Failed to copy."));
     }
 
-    // Helper functions for date buttons
     function pad(num) {
       return num.toString().padStart(2, '0');
     }
 
     function formatDateForLot(date) {
-      // MMDDYY format
       const mm = pad(date.getMonth() + 1);
       const dd = pad(date.getDate());
       const yy = date.getFullYear().toString().slice(-2);
@@ -245,19 +253,16 @@
     }
 
     function getWeekdayName(date) {
-      return date.toLocaleDateString(undefined, { weekday: 'short' }); // e.g. Sun, Mon
+      return date.toLocaleDateString(undefined, { weekday: 'short' });
     }
 
     function createDateButtons() {
       const container = document.getElementById('dateButtonsContainer');
       container.innerHTML = '<strong>Select Date:</strong><br>';
-
       const today = new Date();
-
       for (let i = 0; i < 7; i++) {
         const date = new Date(today);
         date.setDate(today.getDate() + i);
-
         const formattedDate = formatDateForLot(date);
         const weekday = getWeekdayName(date);
 
@@ -266,15 +271,10 @@
         btn.onclick = () => {
           document.getElementById('lotNumbers').value = `${formattedDate}1`;
         };
-
         container.appendChild(btn);
       }
     }
-
-    // Initialize date buttons on page load
     createDateButtons();
-
   </script>
-
 </body>
 </html>
